--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "daisyui": "^2.46.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.8",
+    "react-hook-form": "^7.41.2",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
